# linman_account

./: .env.example  .gitignore  CLAUDE.md  CODEBUDDY.md  DEPLOY_GUIDE.md  M5-git-workflow.md  M6_PLAN.md  PROJECT_CURRENT.md  PROJECT_PLAN.md  build_android.bat  build_one_target.bat  docker-compose.yml  index.html  package-lock.json  package.json  report.html  tsconfig.main.json  tsconfig.node.json  tsconfig.preload.json  tsconfig.web.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .gitignore  CODEBUDDY.md  CONCURRENCY_TEST_REPORT.md  Dockerfile  README.md  TEST_REPORT.json  TEST_REPORT.md  pom.xml  test_output.txt  test_output2.txt  tmp_dbg.ps1  tmp_test_m2.ps1
docs/: DEPLOY_GUIDE.md  android-public-deploy-plan.md  debug-build-troubleshooting.md  deploy-experience.md  deploy-server-setup.md  dynv6-guide.md
frontend/: .env.debug_backup  .gitignore  Dockerfile  build_android.bat  build_android.sh  build_debug_server.bat  build_now.bat  build_one_target.bat  index.html  nginx.conf  package-lock.json  package.json  test_error.txt  vite.config.ts  vitest_log.txt
frontend/scripts/: inject_android_release_config.py
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src-tauri/: tauri.conf.json
frontend/tests/: test_inject_android_release_config.py
src/: App.css  App.tsx  env.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api/: admin.ts  categories.ts  client.ts  feedback.ts  records.ts  (+2 more)
tests/: verify_review_fixes.py
(+264 files in other folders)
