[package]
name = "linman-account-book"
version = "1.0.0"
description = "林蛮记账 - 个人日常记账桌面应用"
authors = [""]
edition = "2021"

[lib]
name = "linman_account_book_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
