[package]
name = "linman-account-book"
version = "1.0.0"
description = "记账大王 - 个人日常记账 App"
authors = [""]
edition = "2021"

[lib]
name = "linman_account_book_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
